Created a profile to run mac sample